# esp32S3_modbus_gateway

./: .gitignore  CMakeLists.txt  README.md  partitons-16MiB.csv  sdkconfig
components/app_gateway/: CMakeLists.txt
components/app_gateway/include/: app_mqtt.h  app_sntp.h  app_tcp_server.h  app_webserver.h  config_manager.h  gateway.h  gateway_tags.h  io_manager.h
components/app_gateway/src/: app_mqtt.c  app_sntp.c  app_tcp_server.c  app_webserver.c  config_manager.c  gateway.c  io_manager.c
components/bsp/: CMakeLists.txt
components/bsp/include/: bsp_fs.h  bsp_gpio.h  bsp_i2c.h  bsp_uart.h  bsp_w5100s.h  bsp_wifi.h  transport_wiznet.h
components/bsp/src/: bsp_fs.c  bsp_gpio.c  bsp_i2c.c  bsp_uart.c  bsp_w5100s.c  bsp_wifi.c  transport_wiznet.c
components/middleware/: CMakeLists.txt
components/middleware/include/: modbus_master.h  modbus_slave.h  modbus_template.h  modbus_utils.h  protocol_engine.h  register_map.h  sensor_parsers.h
components/middleware/src/: modbus_master.c  modbus_slave.c  modbus_template.c  protocol_engine.c  register_map.c  sensor_parsers.c
main/: CMakeLists.txt  idf_component.yml  main.c
